--- a/parckman/index.html
+++ b/parckman/index.html
@@ -169,10 +169,38 @@
       ];
     };
 
-    // Случайный выбор маршрута для каждого NPC
-    const npcRoutes = allParkingSpots.map((spot) => {
-      return Phaser.Math.Between(0, 1) === 0 ? clockwiseRoute(spot) : counterClockwiseRoute(spot);
-    });
+	// Маршрут "верхняя половина периметра" (по часовой стрелке)
+	const upperHalfClockwiseRoute = (spot) => {
+	  const { x, y } = scaleCoords(spot.x, spot.y); // Масштабируем координаты парковочного места
+	  return [
+		{ x, y }, // Парковочное место
+		{ x, y: y - 20 }, // Выезд с парковочного места (начало)
+		{ x, y: y - 50 }, // Выезд с парковочного места (конечная высота)
+		{ x: 700 - npcOffset, y: y - 50 }, // Движение вправо (верхняя горизонтальная дорога)
+		{ x: 700 - npcOffset, y: 400 }, // Движение вниз (правая вертикальная дорога)
+		{ x: 100 + npcOffset, y: 400 }, // Движение влево (центральная горизонтальная дорога)
+		{ x: 100 + npcOffset, y: y - 50 }, // Движение вверх (левая вертикальная дорога)
+		{ x, y: y - 50 }, // Подъезд к парковочному месту (начало)
+		{ x, y: y - 20 }, // Подъезд к парковочному месту (близко)
+		{ x, y: y - 10 }, // Точка для разворота (перед парковочным местом)
+		{ x, y }  // Заезд на парковочное место (очень близко)
+	  ];
+	};
+
+	// Случайный выбор маршрута для каждого NPC
+	const npcRoutes = allParkingSpots.map((spot) => {
+	  const routeType = Phaser.Math.Between(0, 2); // Случайный выбор маршрута (0, 1 или 2)
+	  switch (routeType) {
+		case 0:
+		  return clockwiseRoute(spot); // По часовой стрелке
+		case 1:
+		  return counterClockwiseRoute(spot); // Против часовой стрелки
+		case 2:
+		  return upperHalfClockwiseRoute(spot); // Верхняя половина периметра
+		default:
+		  return clockwiseRoute(spot); // По умолчанию
+	  }
+	});
 
     function preload() {
 	  /*
@@ -253,12 +281,25 @@
 		npc.setCollideWorldBounds(true);
 
 		// Случайный выбор маршрута
-		const isCounterClockwise = Phaser.Math.Between(0, 1) === 1; // Случайное направление
-		npc.route = isCounterClockwise ? counterClockwiseRoute(spot) : clockwiseRoute(spot);
+		const routeType = Phaser.Math.Between(0, 2); // Случайный выбор маршрута (0, 1 или 2)
+		switch (routeType) {
+		  case 0:
+			npc.route = clockwiseRoute(spot); // По часовой стрелке
+			npc.isCounterClockwise = false;
+			break;
+		  case 1:
+			npc.route = counterClockwiseRoute(spot); // Против часовой стрелки
+			npc.isCounterClockwise = true;
+			break;
+		  case 2:
+			npc.route = upperHalfClockwiseRoute(spot); // Верхняя половина периметра
+			npc.isCounterClockwise = false;
+			break;
+		  default:
+			npc.route = clockwiseRoute(spot); // По умолчанию
+			npc.isCounterClockwise = false;
+		}
 		npc.routeIndex = 0;
-
-		// Сохраняем направление маршрута
-		npc.isCounterClockwise = isCounterClockwise;
 
 		// Состояние ожидания
 		npc.isWaiting = true;
