--- a/parckman/index.html
+++ b/parckman/index.html
@@ -187,16 +187,36 @@
 	  ];
 	};
 
+	// Маршрут "верхняя половина периметра" (против часовой стрелки)
+	const upperHalfCounterClockwiseRoute = (spot) => {
+	  const { x, y } = scaleCoords(spot.x, spot.y); // Масштабируем координаты парковочного места
+	  return [
+		{ x, y }, // Парковочное место
+		{ x, y: y - 20 }, // Выезд с парковочного места (начало)
+		{ x, y: y - 50 }, // Выезд с парковочного места (конечная высота)
+		{ x: 100 + npcOffset, y: y - 50 }, // Движение влево (левая вертикальная дорога)
+		{ x: 100 + npcOffset, y: 400 }, // Движение вниз (центральная горизонтальная дорога)
+		{ x: 700 - npcOffset, y: 400 }, // Движение вправо (правая вертикальная дорога)
+		{ x: 700 - npcOffset, y: y - 50 }, // Движение вверх (верхняя горизонтальная дорога)
+		{ x, y: y - 50 }, // Подъезд к парковочному месту (начало)
+		{ x, y: y - 20 }, // Подъезд к парковочному месту (близко)
+		{ x, y: y - 10 }, // Точка для разворота (перед парковочным местом)
+		{ x, y }  // Заезд на парковочное место (очень близко)
+	  ];
+	};
+
 	// Случайный выбор маршрута для каждого NPC
 	const npcRoutes = allParkingSpots.map((spot) => {
-	  const routeType = Phaser.Math.Between(0, 2); // Случайный выбор маршрута (0, 1 или 2)
+	  const routeType = Phaser.Math.Between(0, 3); // Случайный выбор маршрута (0, 1, 2 или 3)
 	  switch (routeType) {
 		case 0:
 		  return clockwiseRoute(spot); // По часовой стрелке
 		case 1:
 		  return counterClockwiseRoute(spot); // Против часовой стрелки
 		case 2:
-		  return upperHalfClockwiseRoute(spot); // Верхняя половина периметра
+		  return upperHalfClockwiseRoute(spot); // Верхняя половина периметра (по часовой стрелке)
+		case 3:
+		  return upperHalfCounterClockwiseRoute(spot); // Верхняя половина периметра (против часовой стрелки)
 		default:
 		  return clockwiseRoute(spot); // По умолчанию
 	  }
@@ -281,7 +301,7 @@
 		npc.setCollideWorldBounds(true);
 
 		// Случайный выбор маршрута
-		const routeType = Phaser.Math.Between(0, 2); // Случайный выбор маршрута (0, 1 или 2)
+		const routeType = Phaser.Math.Between(0, 3); // Случайный выбор маршрута (0, 1, 2 или 3)
 		switch (routeType) {
 		  case 0:
 			npc.route = clockwiseRoute(spot); // По часовой стрелке
@@ -292,8 +312,12 @@
 			npc.isCounterClockwise = true;
 			break;
 		  case 2:
-			npc.route = upperHalfClockwiseRoute(spot); // Верхняя половина периметра
+			npc.route = upperHalfClockwiseRoute(spot); // Верхняя половина периметра (по часовой стрелке)
 			npc.isCounterClockwise = false;
+			break;
+		  case 3:
+			npc.route = upperHalfCounterClockwiseRoute(spot); // Верхняя половина периметра (против часовой стрелки)
+			npc.isCounterClockwise = true;
 			break;
 		  default:
 			npc.route = clockwiseRoute(spot); // По умолчанию
