--- a/parckman/index.html
+++ b/parckman/index.html
@@ -205,9 +205,27 @@
 	  ];
 	};
 
+	// Маршрут "левая половина периметра" (по часовой стрелке)
+	const leftHalfClockwiseRoute = (spot) => {
+	  const { x, y } = scaleCoords(spot.x, spot.y); // Масштабируем координаты парковочного места
+	  return [
+		{ x, y }, // Парковочное место
+		{ x, y: y - 20 }, // Выезд с парковочного места (начало)
+		{ x, y: y - 50 }, // Выезд с парковочного места (конечная высота)
+		{ x: 400 - npcOffset, y: y - 50 }, // Движение вправо (верхняя горизонтальная дорога)
+		{ x: 400 - npcOffset, y: 400 }, // Движение вниз (центральная вертикальная дорога)
+		{ x: 100 + npcOffset, y: 400 }, // Движение влево (центральная горизонтальная дорога)
+		{ x: 100 + npcOffset, y: y - 50 }, // Движение вверх (левая вертикальная дорога)
+		{ x, y: y - 50 }, // Подъезд к парковочному месту (начало)
+		{ x, y: y - 20 }, // Подъезд к парковочному месту (близко)
+		{ x, y: y - 10 }, // Точка для разворота (перед парковочным местом)
+		{ x, y }  // Заезд на парковочное место (очень близко)
+	  ];
+	};
+
 	// Случайный выбор маршрута для каждого NPC
 	const npcRoutes = allParkingSpots.map((spot) => {
-	  const routeType = Phaser.Math.Between(0, 3); // Случайный выбор маршрута (0, 1, 2 или 3)
+	  const routeType = Phaser.Math.Between(0, 4); // Случайный выбор маршрута (0, 1, 2, 3 или 4)
 	  switch (routeType) {
 		case 0:
 		  return clockwiseRoute(spot); // По часовой стрелке
@@ -217,6 +235,8 @@
 		  return upperHalfClockwiseRoute(spot); // Верхняя половина периметра (по часовой стрелке)
 		case 3:
 		  return upperHalfCounterClockwiseRoute(spot); // Верхняя половина периметра (против часовой стрелки)
+		case 4:
+		  return leftHalfClockwiseRoute(spot); // Левая половина периметра (по часовой стрелке)
 		default:
 		  return clockwiseRoute(spot); // По умолчанию
 	  }
@@ -301,7 +321,7 @@
 		npc.setCollideWorldBounds(true);
 
 		// Случайный выбор маршрута
-		const routeType = Phaser.Math.Between(0, 3); // Случайный выбор маршрута (0, 1, 2 или 3)
+		const routeType = Phaser.Math.Between(0, 4); // Случайный выбор маршрута (0, 1, 2, 3 или 4)
 		switch (routeType) {
 		  case 0:
 			npc.route = clockwiseRoute(spot); // По часовой стрелке
@@ -318,6 +338,10 @@
 		  case 3:
 			npc.route = upperHalfCounterClockwiseRoute(spot); // Верхняя половина периметра (против часовой стрелки)
 			npc.isCounterClockwise = true;
+			break;
+		  case 4:
+			npc.route = leftHalfClockwiseRoute(spot); // Левая половина периметра (по часовой стрелке)
+			npc.isCounterClockwise = false;
 			break;
 		  default:
 			npc.route = clockwiseRoute(spot); // По умолчанию
