--- a/parckman/index.html
+++ b/parckman/index.html
@@ -205,7 +205,7 @@
 	  ];
 	};
 
-	// Маршрут "левая половина периметра" (по часовой стрелке)
+	// Маршрут "левая верхняя четверть периметра" (по часовой стрелке)
 	const leftHalfClockwiseRoute = (spot) => {
 	  const { x, y } = scaleCoords(spot.x, spot.y); // Масштабируем координаты парковочного места
 	  return [
@@ -222,23 +222,84 @@
 		{ x, y }  // Заезд на парковочное место (очень близко)
 	  ];
 	};
+	
+	// Маршрут "левая верхняя четверть периметра" (против часовой стрелки)
+	const leftHalfCounterClockwiseRoute = (spot) => {
+	  const { x, y } = scaleCoords(spot.x, spot.y);
+	  return [
+		{ x, y }, // Парковочное место
+		{ x, y: y - 20 }, // Выезд с парковочного места
+		{ x, y: y - 50 }, // Выезд на основную дорогу
+		{ x: 100 + npcOffset, y: y - 50 }, // Движение влево (левая вертикальная)
+		{ x: 100 + npcOffset, y: 400 }, // Движение вниз (центральная горизонтальная)
+		{ x: 400, y: 400 }, // Движение вправо (центральная вертикальная)
+		{ x: 400, y: y - 50 }, // Движение вверх (верхняя горизонтальная)
+		{ x, y: y - 50 }, // Подъезд к парковочному месту
+		{ x, y: y - 20 }, // Ближний подъезд
+		{ x, y: y - 10 }, // Точка разворота
+		{ x, y } // Заезд на парковочное место
+	  ];
+	};
+	
+	// Маршрут "правая половина периметра" (по часовой стрелке)
+	const rightHalfClockwiseRoute = (spot) => {
+	  const { x, y } = scaleCoords(spot.x, spot.y);
+	  return [
+		{ x, y }, // Парковочное место
+		{ x, y: y - 20 }, // Выезд с парковочного места
+		{ x, y: y - 50 }, // Выезд на основную дорогу
+		{ x: 700 - npcOffset, y: y - 50 }, // Движение вправо (верхняя горизонтальная)
+		{ x: 700 - npcOffset, y: 700 - npcOffset }, // Движение вниз (правая вертикальная)
+		{ x: 400, y: 700 - npcOffset }, // Движение влево (центральная горизонтальная)
+		{ x: 400, y: y - 50 }, // Движение вверх (центральная вертикальная)
+		{ x, y: y - 50 }, // Подъезд к парковочному месту
+		{ x, y: y - 20 }, // Ближний подъезд
+		{ x, y: y - 10 }, // Точка разворота
+		{ x, y } // Заезд на парковочное место
+	  ];
+	};
+
+	// Маршрут "правая верхняя четверть периметра" (по часовой стрелке)
+	const rightUpperQuarterClockwiseRoute = (spot) => {
+	  const { x, y } = scaleCoords(spot.x, spot.y);
+	  return [
+		{ x, y }, // Парковочное место
+		{ x, y: y - 20 }, // Выезд с парковочного места
+		{ x, y: y - 50 }, // Выезд на основную дорогу
+		{ x: 700 - npcOffset, y: y - 50 }, // Движение вправо
+		{ x: 700 - npcOffset, y: 400 }, // Движение вниз (правая вертикальная)
+		{ x: 400, y: 400 }, // Движение влево (центральная горизонтальная)
+		{ x: 400, y: y - 50 }, // Движение вверх (центральная вертикальная)
+		{ x, y: y - 50 }, // Подъезд к парковочному месту
+		{ x, y: y - 20 }, // Ближний подъезд
+		{ x, y: y - 10 }, // Точка разворота
+		{ x, y } // Заезд на парковочное место
+	  ];
+	};	
 
 	// Случайный выбор маршрута для каждого NPC
 	const npcRoutes = allParkingSpots.map((spot) => {
-	  const routeType = Phaser.Math.Between(0, 4); // Случайный выбор маршрута (0, 1, 2, 3 или 4)
+	  const routeType = Phaser.Math.Between(0, 7);
 	  switch (routeType) {
 		case 0:
-		  return leftHalfClockwiseRoute(spot); // Левая половина периметра (по часовой стрелке)		
+		  return clockwiseRoute(spot); // По часовой стрелке
 		case 1:
-		  return upperHalfCounterClockwiseRoute(spot); // Верхняя половина периметра (против часовой стрелки)		
+		  return counterClockwiseRoute(spot); // Против часовой стрелки
 		case 2:
 		  return upperHalfClockwiseRoute(spot); // Верхняя половина периметра (по часовой стрелке)
 		case 3:
-		  return counterClockwiseRoute(spot); // Против часовой стрелки
+		  return upperHalfCounterClockwiseRoute(spot); // Верхняя половина периметра (против часовой стрелки)
 		case 4:
-		  return clockwiseRoute(spot); // По часовой стрелке
+		  return leftHalfClockwiseRoute(spot); // Левая верхняя четверть периметра (по часовой стрелке)
+		case 5:
+		  return leftHalfCounterClockwiseRoute(spot); // Левая верхняя четверть периметра (против часовой стрелки)
+		case 6:
+		  return rightHalfClockwiseRoute(spot); // Правая половина периметра (по часовой стрелке)
+		case 7: 
+		  return rightUpperQuarterClockwiseRoute(spot); // Правая верхняя четверть периметра (по часовой стрелке)
+
 		default:
-		  return clockwiseRoute(spot); // По умолчанию
+		  return clockwiseRoute(spot); // return clockwiseRoute(spot);
 	  }
 	});
 
@@ -320,43 +381,57 @@
 		const npc = this.physics.add.sprite(x, y, 'npcCar').setScale(0.5);
 		npc.setCollideWorldBounds(true);
 
-		// Случайный выбор маршрута
-		const routeType = Phaser.Math.Between(0, 4); // Случайный выбор маршрута (0, 1, 2, 3 или 4)
+		// Случайный выбор маршрута (теперь 0-6)
+		const routeType = Phaser.Math.Between(0, 7);
 		switch (routeType) {
 		  case 0:
-			npc.route = clockwiseRoute(spot); // По часовой стрелке
+			npc.route = clockwiseRoute(spot);
 			npc.isCounterClockwise = false;
 			break;
 		  case 1:
-			npc.route = counterClockwiseRoute(spot); // Против часовой стрелки
+			npc.route = counterClockwiseRoute(spot);
 			npc.isCounterClockwise = true;
 			break;
 		  case 2:
-			npc.route = upperHalfClockwiseRoute(spot); // Верхняя половина периметра (по часовой стрелке)
+			npc.route = upperHalfClockwiseRoute(spot);
 			npc.isCounterClockwise = false;
 			break;
 		  case 3:
-			npc.route = upperHalfCounterClockwiseRoute(spot); // Верхняя половина периметра (против часовой стрелки)
+			npc.route = upperHalfCounterClockwiseRoute(spot);
 			npc.isCounterClockwise = true;
 			break;
 		  case 4:
-			npc.route = leftHalfClockwiseRoute(spot); // Левая половина периметра (по часовой стрелке)
+			npc.route = leftHalfClockwiseRoute(spot);
 			npc.isCounterClockwise = false;
 			break;
+		  case 5:
+			npc.route = leftHalfCounterClockwiseRoute(spot);
+			npc.isCounterClockwise = true;
+			break;
+		  case 6:
+			npc.route = rightHalfClockwiseRoute(spot);
+			npc.isCounterClockwise = false;
+			break;
+		  case 7:
+			npc.route = rightUpperQuarterClockwiseRoute(spot);
+			npc.isCounterClockwise = false;
+			break;			
+			
 		  default:
-			npc.route = clockwiseRoute(spot); // По умолчанию
+			npc.route = clockwiseRoute(spot);
 			npc.isCounterClockwise = false;
 		}
+		
 		npc.routeIndex = 0;
 
 		// Состояние ожидания
 		npc.isWaiting = true;
 
 		// Задержка перед началом движения (от 1 до 5 секунд)
-		const delay = Phaser.Math.Between(100, 5000); // Задержка в миллисекундах
+		const delay = Phaser.Math.Between(100, 5000);
 		this.time.delayedCall(delay, () => {
-		  npc.isWaiting = false; // Завершаем ожидание
-		  moveNPCToNextPoint(npc); // Начинаем движение
+		  npc.isWaiting = false;
+		  moveNPCToNextPoint(npc);
 		}, [], this);
 
 		return npc;
