--- a/parckman/index.html
+++ b/parckman/index.html
@@ -275,11 +275,29 @@
 		{ x, y: y - 10 }, // Точка разворота
 		{ x, y } // Заезд на парковочное место
 	  ];
+	};
+	
+	// Маршрут "правая верхняя четверть периметра" (против часовой стрелки)
+	const rightUpperQuarterCounterClockwiseRoute = (spot) => {
+	  const { x, y } = scaleCoords(spot.x, spot.y);
+	  return [
+		{ x, y }, // Парковочное место
+		{ x, y: y - 20 }, // Выезд с парковочного места
+		{ x, y: y - 50 }, // Выезд на основную дорогу
+		{ x: 400, y: y - 50 }, // Движение к центральной вертикальной
+		{ x: 400, y: 400 }, // Движение вниз (центральная вертикальная)
+		{ x: 700 - npcOffset, y: 400 }, // Движение вправо (центральная горизонтальная)
+		{ x: 700 - npcOffset, y: y - 50 }, // Движение вверх (правая вертикальная)
+		{ x, y: y - 50 }, // Подъезд к парковочному месту
+		{ x, y: y - 20 }, // Ближний подъезд
+		{ x, y: y - 10 }, // Точка разворота
+		{ x, y } // Заезд на парковочное место
+	  ];
 	};	
 
 	// Случайный выбор маршрута для каждого NPC
 	const npcRoutes = allParkingSpots.map((spot) => {
-	  const routeType = Phaser.Math.Between(0, 7);
+	  const routeType = Phaser.Math.Between(0, 8);
 	  switch (routeType) {
 		case 0:
 		  return clockwiseRoute(spot); // По часовой стрелке
@@ -297,6 +315,8 @@
 		  return rightHalfClockwiseRoute(spot); // Правая половина периметра (по часовой стрелке)
 		case 7: 
 		  return rightUpperQuarterClockwiseRoute(spot); // Правая верхняя четверть периметра (по часовой стрелке)
+		case 8: 
+		  return rightUpperQuarterCounterClockwiseRoute(spot); // Правая верхняя четверть периметра (против часовой стрелки)	  
 
 		default:
 		  return clockwiseRoute(spot); // return clockwiseRoute(spot);
@@ -382,7 +402,7 @@
 		npc.setCollideWorldBounds(true);
 
 		// Случайный выбор маршрута (теперь 0-6)
-		const routeType = Phaser.Math.Between(0, 7);
+		const routeType = Phaser.Math.Between(0, 8);
 		switch (routeType) {
 		  case 0:
 			npc.route = clockwiseRoute(spot);
@@ -415,6 +435,10 @@
 		  case 7:
 			npc.route = rightUpperQuarterClockwiseRoute(spot);
 			npc.isCounterClockwise = false;
+			break;
+		  case 8:
+			npc.route = rightUpperQuarterCounterClockwiseRoute(spot);
+			npc.isCounterClockwise = true;
 			break;			
 			
 		  default:
